--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-VITE_API_MODE = production
+VITE_API_MODE = development
 
-VITE_API_LOCAL_BACKEND_URL=http://192.168.4.254:3002/api/v1
+VITE_API_LOCAL_BACKEND_URL=http://192.168.5.31:3002/api/v1
 
 VITE_API_PROD_BACKEND_URL=https://tudana.com.tm/api/v1
