--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-hook-form": "^7.71.1",
     "react-i18next": "^16.5.4",
     "react-router-dom": "^7.13.0",
+    "swiper": "^12.1.2",
     "tailwindcss": "^4.1.18",
     "yup": "^1.7.1"
   },
