--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 VITE_API_MODE = development
 
-VITE_API_LOCAL_BACKEND_URL=http://192.168.5.31:3002/api/v1
+VITE_API_LOCAL_BACKEND_URL=http://194.156.117.223:8007/yerinde/company-service
 
-VITE_API_PROD_BACKEND_URL=https://tudana.com.tm/api/v1
+VITE_API_PROD_BACKEND_URL=http://194.156.117.223:8007/yerinde/company-service
