--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dayjs": "^1.11.19",
     "i18next": "^25.8.0",
     "i18next-browser-languagedetector": "^8.2.0",
+    "js-cookie": "^3.0.5",
     "lottie-react": "^2.4.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
